removed work experience from home page

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -13,7 +13,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
   <div class="container container-large">
     <div class="padding-global pt-24 md:pt-32 pb-16 md:pb-24">
       <!-- Work Experience -->
-      <div>
+      <!-- <div>
         <h2 class="mb-12 padding-extra">Work Experience</h2>
         <div
           class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-x-20 lg:gap-y-8 padding-extra"
@@ -48,12 +48,12 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
             description="Crafted a robust content and email strategy, enhancing site and email presence through rebranding, SEO, and compelling editorial pieces which led to a 900% increase in site traffic. Managed weekly analytics, leveraging insights to optimize content and marketing strategies. Collaborated with engineers to create a display ad network, generating upwards of $200k annually. Performed usability testing on new products, writing detailed feedback and bug reports for the dev team to optimize new features before launch."
           />
         </div>
-      </div>
+      </div> -->
       <!-- Education & Certifications -->
 
       <div class="padding-extra">
-        <div class="mt-24 border-2 border-gray-600"></div>
-        <h2 class="mt-24 mb-16">Certifications & Education</h2>
+        <!-- <div class="mt-24 border-2 border-gray-600"></div> -->
+        <h2 class="mb-16">Certifications & Education</h2>
         <div>
           <div
             class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-4 md:gap-10"
