--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -63,11 +63,13 @@ import graphic from "../images/graphics/graphic-1.webp";
                   </p> -->
 
                 <h5>What I Provide</h5>
-                <h2 class="">5 Ways a UX Engineer Can Help Your Team</h2>
+                <h2 class="">
+                  5 Ways a UX Engineer Like Me Can Help Your Team
+                </h2>
                 <div>
                   <p>
-                    The work of a user-experience engineer spans the realms of
-                    design, development, and product strategy. Here's what we
+                    My work as a user-experience engineer spans the realms of
+                    design, development, and product strategy. Here's what I
                     bring to the table:
                   </p>
                   <p>
@@ -80,14 +82,14 @@ import graphic from "../images/graphics/graphic-1.webp";
                   </p>
                   <p>
                     <span class="font-bold">2. Rapid Prototyping:</span>
-                    A UX engineer on the design team speeds up testing and iteration
-                    by quickly creating proof-of-concept prototypes.
+                    I speed up testing and iteration by helping the design team create
+                    proof-of-concept prototypes using real code.
                   </p>
                   <p>
                     <span class="font-bold"
                       >3. Precision in Implementation:</span
                     >
-                    We can accurately translate complex design ideas into fully functional
+                    I can accurately translate complex design ideas into fully functional
                     interfaces, maintaining the original design vision while ensuring
                     a seamless user experience.
                   </p>
@@ -99,12 +101,24 @@ import graphic from "../images/graphics/graphic-1.webp";
 
                   <p>
                     <span class="font-bold">5. Tech Translator:</span>
-                    We blend our engineering expertise with our UX skills in empathy
-                    and communication to break down technical concepts for non-technical
-                    stakeholders.
+                    I blend my engineering expertise with my UX skills in empathy,
+                    communication, and copywriting to break down technical concepts
+                    for non-technical stakeholders.
                   </p>
 
-                  <div class="flex flex-col">
+                  <div class="flex flex-row">
+                    <span class="font-bold">Learn More: &nbsp;</span>
+                    <span class="">
+                      <a
+                        class="underline"
+                        href="/blog/6-things-ux-engineers-can-do-that-engineers-cant/"
+                      >
+                        6 Things UX Engineers Can Do that (Most) Engineers Can't</a
+                      >
+                    </span>
+                  </div>
+
+                  <!-- <div class="flex flex-col">
                     <span class="font-bold">Learn More:</span>
                     <span class="">
                       -
@@ -126,7 +140,7 @@ import graphic from "../images/graphics/graphic-1.webp";
                         Can't</a
                       >
                     </span>
-                  </div>
+                  </div> -->
 
                   <!--
               <div class="flex flex-col gap-4">
