tweaked copy, layout

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -52,8 +52,11 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
       <!-- Education & Certifications -->
 
       <div class="padding-extra">
-        <!-- <div class="mt-24 border-2 border-gray-600"></div> -->
-        <h2 class="mb-16">Certifications & Education</h2>
+        <!-- <div class="mt-24 items-ceborder-2 border-gray-600"></div> -->
+        <div class="flex w-full justify-center">
+          <h2 class="mb-20">Certifications & Education</h2>
+        </div>
+
         <div>
           <div
             class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-4 md:gap-10"
