--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -64,7 +64,7 @@ import graphic from "../images/graphics/graphic-1.webp";
 
                 <h5>What I Provide</h5>
                 <h2 class="">
-                  5 Ways a UX Engineer Like Me Can Help Your Team
+                  5 Ways a UX Engineer (Like Me) Can Help Your Team
                 </h2>
                 <div>
                   <p>
@@ -94,28 +94,26 @@ import graphic from "../images/graphics/graphic-1.webp";
                     a seamless user experience.
                   </p>
                   <p>
-                    <span class="font-bold">4. Agility in Development:</span>
-                    For crucial sprints, UX engineers can shift into full-time dev
-                    mode and provide a much-needed extra set of hands.
+                    <span class="font-bold">4. User-Focused Development:</span>
+                    My code follows UX best practices like responsive design, accessibility,
+                    and predictable navigation.
                   </p>
 
                   <p>
                     <span class="font-bold">5. Tech Translator:</span>
                     I blend my engineering expertise with my UX skills in empathy,
                     communication, and copywriting to break down technical concepts
-                    for non-technical stakeholders.
+                    for non-technical users and stakeholders.
                   </p>
 
-                  <div class="flex flex-row">
-                    <span class="font-bold">Learn More: &nbsp;</span>
-                    <span class="">
-                      <a
-                        class="underline"
-                        href="/blog/6-things-ux-engineers-can-do-that-engineers-cant/"
-                      >
-                        6 Things UX Engineers Can Do that (Most) Engineers Can't</a
-                      >
-                    </span>
+                  <div>
+                    <span class="font-bold">Learn More:&nbsp;</span>
+                    <a
+                      class="underline"
+                      href="/blog/6-things-ux-engineers-can-do-that-engineers-cant/"
+                    >
+                      6 Things UX Engineers Can Do that (Most) Engineers Can't</a
+                    >
                   </div>
 
                   <!-- <div class="flex flex-col">
