--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -10,7 +10,9 @@ import designIcon from "../images/icons/design-icon-1.png";
     <div class="padding-global py-20 lg:py-32">
       <div class="padding-extra">
         <div class="flex w-full flex-col">
-          <h2 class="mb-8 text-left w-full">My Skills</h2>
+          <div class="flex">
+            <h2 class="mb-8">My Skills</h2>
+          </div>
 
           <!-- 3 Boxes -->
           <div class="flex items-stretch">
