changed GC link to presentation link

--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -73,7 +73,7 @@ const optimizedBackground = await getImage({
             ]}
             header="Girl Camper UX & Analytics Audit"
             text="I was hired to conduct a UX and analytics audit for Girl Camper, a popular camping and RVing site for women with over a million followers. I utilized Google Analytics and Crazy Egg to track user behavior and analyze the data, identifying areas for improvement and optimization. After compiling my findings, I made several recommendations including an overhaul of the hero section based on UX best practices, a reordering of the homepage sections according to user behavior analytics, and revisions to the user onboarding flow designed to reduce friction and increase sign-ups. My insights are currently being used to guide an overhaul of the site. New metrics will be available soon!"
-            link="https://docs.google.com/presentation/d/1IMINEAH_ypOf5mbiwSHVLK8URMz2iOPMjdIQyKBcBQ0/edit?usp=sharing"
+            link="https://docs.google.com/presentation/d/e/2PACX-1vRyZ-x0znxY-kkAD1b-SbhNtvlS__oafa1O530rnBkyMW5ElUd3lNPLaFvtBMevoDniHAO-A6ZCecnT/pub?start=false&loop=false&delayms=60000"
           />
           <Project
             image={nflScorePredictor}
@@ -88,7 +88,7 @@ const optimizedBackground = await getImage({
               "Heroku",
             ]}
             header="NFL Score Predictor"
-            text="This app integrates Python-driven machine learning with a JavaScript frontend, enabling users to predict the outcome of games between NFL teams from the last 20 years. I harvested historical NFL data through web scraping, producing CSVs that I then cleaned and refined using pandas. This data fueled the training of over a hundred machine learning models, leveraging regularization, feature engineering, and hyperparameter optimization. After assessing these models for accuracy, I used the most effective one to forecast the 2023 NFL playoffs, where it predicted 70% of games correctly. The app utilizes a Flask API to serve static React frontend files and fetch predictions from the Python backend for user display."
+            text="This app integrates Python-driven machine learning with a JavaScript frontend, enabling users to predict the outcome of games between NFL teams from the last 20 years. I collected historical NFL data of scores and team statistic using a custom web scraper, producing CSVs that I then cleaned and refined using pandas. This data fueled the training of over a hundred machine learning models, leveraging regularization, feature engineering, and hyperparameter optimization. After assessing these models for accuracy, I used the most effective one to forecast the 2023 NFL playoffs, where it predicted 70% of games correctly. The app utilizes a Flask API to serve static React frontend files and fetch predictions from the Python backend for user display."
             link="https://nfl-game-predictor-420541ce96e2.herokuapp.com/"
             links={{
               "View Code":
