--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -73,7 +73,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
             />
             <Certification
               title="Python Data Analyst"
-              text="Achieved profieciency in Python data and visualization libraries like Pandas and Matplotlib, as well as foundations in machine learning and data analysis."
+              text="Achieved profieciency in Python data and visualization libraries, as well as foundations in machine learning and exploratory data analysis."
               image={dataCampIcon}
             />
             <Certification
