--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -26,7 +26,7 @@ import designIcon from "../images/icons/design-icon-1.png";
               />
               <Card
                 header="UX/UI Design"
-                text="I create frictionless user journeys and easy-to-navigate interfaces, boost engagement and accomplishing business objectives."
+                text="I create frictionless user journeys and easy-to-navigate interfaces that boost engagement and accomplish business objectives."
                 icon={designIcon}
                 classes="w-full max-w-md xl:w-1/3"
                 nudge="-left-1"
