--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -19,7 +19,7 @@ import Icons from "./Icons.astro";
               >
                 <div class="flex items-center gap-4 lg:gap-6">
                   <HeaderLink href="/" text="Home" />
-                  <HeaderLink href="/blog" text="Blog" />
+                  <!-- <HeaderLink href="/blog" text="Blog" /> -->
                   <HeaderLink href="/resume" text="Resume" />
                   <HeaderLink href="/contact" text="Contact" />
                 </div>
@@ -65,7 +65,7 @@ import Icons from "./Icons.astro";
       <div class="text-white flex items-center h-full flex-col gap-8">
         <HeaderLink href="/" classNames="block text-xl px-4 py-2" text="Home" />
         <HeaderLink href="/resume" text="Resume" />
-        <HeaderLink href="/blog" text="Blog" />
+        <!-- <HeaderLink href="/blog" text="Blog" /> -->
         <HeaderLink
           href="/contact"
           classNames="block text-xl px-4 py-2 1"
